[package]
name = "ghp-cli"
version = "0.1.0"
edition = "2021"
description = "A command line interface for GitHub Pages; intended as a client partner tool to the Github Pilot server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-pilot-api = { version = "0.1", path = "../github-api" }

clap = {version = "3.2.16", features = ["derive", "env"] }
comfy-table = "6.0.0"
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.17"
serde_yaml = "0.9.13"
tokio = {version = "1.20.1", features = ["full"] }
