[package]
name = "ghp"
version = "0.1.0"
edition = "2021"
description = "A command line interface for GitHub Pages; intended as a client partner tool to the Github Pilot server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-pilot-api = { version = "0.1", path = "../github-api" }

clap = {version = "4.0.29", features = ["derive", "env"] }
comfy-table = "6.0.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
git2 = "0.15.0"
hex = "0.4.3"
log = "0.4.17"
prompts = { version = "0.4", git = "https://github.com/CjS77/prompts-rs.git", branch = "main"}
serde_json = "1.0.70"
serde_yaml = "0.9.13"
tokio = {version = "1.20.1", features = ["full"] }
url = "2.3.1"
