[package]
name = "gh-pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghp-api = { version = "0.1", path = "../github-api" }
async-trait = "0.1.57"
log = "0.4.17"
serde = {version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
reqwest = { version = "0.11.11", features = ["json"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
