[package]
name = "github-pilot-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
chrono = { version = "0.4.20", features = ["serde"] }
graphql_client = "0.11.0"
log = "0.4.17"
serde = { version = "1.0.142", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "multipart"]}
thiserror = "1.0.32"
regex = "1.6.0"
serde_json = "1.0.83"

[dev-dependencies]
schemars = "0.8.10"
tokio = {version = "1.20.1", features = ["full"] }
typify = { version = "0.0.9" }