[package]
name = "ghp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghp-api = { version = "0.1", path = "../github-api" }
gh-pilot = { version = "0.1", path = "../gh-pilot" }

actix = { version = "0.13.0" }
actix-web = "4.1.0"
async-trait = "0.1.57"
env_logger = "0.9.0"
futures = "0.3.21"
hmac = "0.12.1"
log = "0.4.17"
serde = {version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
sha2 = "0.10.5"
subtle = "2.4.1"
thiserror = "1.0.32"
tari_utilities = "0.3.0"
tokio = { version = "1.20.1", features = ["full"] }
zeroize = "1.5.7"